--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -2,12 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.content-title {
-  font-size: 2.5em;
-  text-align: center;
-  margin-bottom: 25px;
-}
-
 .deck-creation-wrapper {
   display: grid;
   grid-template-columns: 1fr 0.35fr;
@@ -56,33 +50,67 @@
   margin-bottom: 10px;
 }
 
-// show page
-
+// Deck show page
 .show-deck-card-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  border: 1px solid green;
+  grid-template-columns: 1fr 0.4fr;
+  grid-gap: 15px;
+  width: 92.5%;
+  margin: 0 auto 3.5rem;
+  border-radius: 25px;
+  background-color: #282828;
 
-  div {
-    border: 1px solid blue;
+  .left-col {
+    display: grid;
+    grid-template-rows: 0.1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 20px;
+    padding: 40px 60px;
+    color: #D4D4D4;
+  }
+
+  .right-col {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 35px 0;
+    border-left: 7.5px solid #909090;
   }
 }
 
-#hover-card-image {
-  height: 500px;
-  width: 355px;
-  // background-image: url("mtg_cardback.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
+.deck-list-sec-title {
+  grid-column: 1 / 4;
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: 600;
+}
+
+.card-type-deck-title {
+  margin-bottom: 16.5px;
+  font-weight: 600;
 }
 
 
+#hover-card-image {
+  height: 492.5px;
+  width: 355px;
+  background-image: url("mtg_cardback.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 19.5px;
+}
 
+.card-in-deck {
+  margin-bottom: 6.5px;
+}
 
+.card-in-deck:hover {
+  cursor: e-resize;
+}
 
-
-
-
+.type-list > p:last-of-type {
+  margin-bottom: 30px;
+}
 
 
 
