--- a/app/views/decks/result.html.erb
+++ b/app/views/decks/result.html.erb
@@ -14,24 +14,24 @@
 	</div>
 	<div>
 	    Type:
-		
+
 			<%=select_tag "card_type", options_from_collection_for_select($type, 'to_s', 'to_s'),{:include_blank => 'Type list'} %>
     </div>
     <div>
 	    Creature Type:
-		
+
 			<%=select_tag "creature_type", options_from_collection_for_select($creaturetype, 'to_s', 'to_s'),{:include_blank => 'Creature Type list'} %>
     </div>
 	<div>
 	    Set:
-		
+
 			<%=select_tag "set", options_from_collection_for_select($set, 'code', 'name'),{:include_blank => 'Set list'} %>
     </div>
     <input type="hidden" name="user_id" value="<%= current_user.id %>">
     <input type="hidden" name="deck_id" value="<%= params[:id] %>">
     <input type="hidden" name="page_id" value="search">
     <input type="submit" id="search" value="Search">
-	
+
 </div>
 <% end %>
 
@@ -52,7 +52,7 @@
           <% else %>
           	<p class='card-subtype'><%= card.subtypes.join(', ') %></p>
           <% end %>
-          <p class='card-set'><%= card.set_name %></p> 
+          <p class='card-set'><%= card.set_name %></p>
           <p class='card-rarity'><%= card.rarity %></p>
           	<% if user_signed_in? %>
 	          <% if current_user.id == @deck.user_id %>
@@ -72,17 +72,16 @@
 
   <div class='deck-list-wrapper'>
     <h2 class='deck-title'>Deck List</h2>
-		<% @deck_card_names.each_with_index do |c, i| %>
-			<% if  @deck_card_images[i] == nil || @deck_card_images[i] == "nil" %>
-				<div class='deck-list-card' style="background-image: url(<%= image_url('mtg_cardback.jpg') %>)"><%= c %></div>
+		<% @card_list_hash.each_with_index do |(cname, array), i| %>
+			<% if @image_set_array[i] == nil %>
+				<div class='deck-list-card' style="background-image: url(<%= image_url('mtg_cardback.jpg') %>)"><%= array[0].to_s + "x - " + cname %></div>
 			<% else %>
-				<div class='deck-list-card' style="background-image: url(<%= @deck_card_images[i] %>)"><%= c %></div>
+				<div class='deck-list-card' style="background-image: url(<%= @image_set_array[i] %>)"><%= array[0].to_s + "x - " + cname %></div>
 			<% end %>
-
 			<% if user_signed_in? %>
-	        	<% if current_user.id == @deck.user_id %>
+	      <% if current_user.id == @deck.user_id %>
 					<%= form_tag "/remove_card" , :name => "removeCard" do %>
-						<%= hidden_field_tag :card_index, i %>
+						<%= hidden_field_tag :card_name, cname %>
 						<%= hidden_field_tag :deck_id, @deck.id %>
 						<input type="submit" value="remove card">
 					<% end %>
@@ -115,4 +114,3 @@
 			<li> <a href="/users/<%= params[:user_id] %>/decks/<%= params[:id] %>/result/<%= @search_name %>%/<%= @search_color %>%/<%= @search_type %>%/<%= @search_creature %>%/<%= @search_set%>%/<%= @pagenum.to_i - 1 %>">Previous</a></li>
 		</ul>
 	<% end %>
-
