--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,5 +1,7 @@
 <% if user_signed_in?%> <div class="deck_name"> Your decks: </div>
 	<br>
+		<div class="container">
+
 		<% if @decks.length != 0%> <% for deck in @decks %>
 			<% if deck.user_id == current_user.id %>
 			<div class="wrapper">
@@ -15,5 +17,4 @@
 			<div><%= link_to "Click here to make a new deck", new_user_deck_path(current_user) %></div>
 		<% end %>
 	<% end %>
-	<div>
 </div>
