--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="bothForms">
-  <h2>Forgot your password?</h2>
+  <h2 class="formTitle">Forgot your password?</h2>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= devise_error_messages! %>
 
@@ -13,7 +13,7 @@
     </div>
   <% end %>
   <hr>
-  
+
   <%= render "devise/shared/links" %>
 
 </div>
