--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -113,7 +113,7 @@
 }
 
 .wrapper{
-  border: 2px solid; border-radius: 50px;
+  border: 2px solid; border-radius: 25px;
   background-color: #282828; width: 30%;
   margin: 10px auto; box-shadow: 3px 3px 3px black;
   color: white;
@@ -135,18 +135,22 @@
 }
 
 .image{
-  margin: 0 auto;
+  margin: 10px auto;
+
   // border: 2px solid;
+  border-radius: 15px;
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  width: 250px;
-  height: 400px;
+  width: 200px;
+  height: 300px;
   background-image: url('mtg_cardback.jpg');
 }
 
 .container{
   display: flex;
   flex-wrap: wrap;
+  width: 75%;
+  margin: 0 auto;
 }
 
 
