--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -5,18 +5,20 @@
 	width: 85%;
 	grid-row-gap: 20%;
 	grid-column-gap: 2%;
-	margin: 5rem auto;
+	margin: 5rem auto 2.5rem;
 	background-color: #282828;
 	color: #d4d4d4;
 	padding: 3% 3% 4% 3%;
-
 }
+
 #card_name{
 	width: 85%;
 }
+
 .search-word{
 	text-align: right;
 }
+
 .search-button{
 	grid-row: 2/3;
 	grid-column: 6/7;
