edit deck page 99 percent done need to transfer to results

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -4,7 +4,7 @@
   grid-column-gap: 2%;
   width: 95%;
   padding: 2.5rem 1.5rem;
-  margin: 0 auto;
+  margin: 0 auto 3.5rem;
   background-color: #282828;
   color: #D4D4D4;
 }
@@ -12,29 +12,85 @@
 .card-result-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 100px;
   grid-column-gap: 20px;
   grid-row-gap: 10px;
 }
 
 .card-image {
   height: 300px;
-  width: 250px;
+  width: 217px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin: 0 auto 10px;
+  margin: 20px auto 20px;
 }
 
-.card-information{
+.card-name-cost {
+  font-weight: 500;
   text-align: center;
+  margin-bottom: 15px;
 }
 
+.card-text {
+  margin: 0 7.5% 20px;
+  font-size: 0.9em;
+  line-height: 1.5em;
+  padding-bottom: 17.5px;
+  border-bottom: 2px solid #D4D4D4;
+}
+
+.card-price {
+  text-align: center;
+  font-size: 0.9em;
+  margin-bottom: 15px;
+}
+
+.add-card-button {
+  display: block;
+  background-color: #282828;
+  color: #D4D4D4;
+  padding: 12px 15px 8px;
+  margin: 0 auto 25px;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.add-card-button:hover {
+  filter: invert(100%);
+}
+
+.prev-next-sec {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  grid-column: 1 / 4;
+}
+
+.page-button {
+  text-decoration: none;
+  color: #D4D4D4;
+  background-color: #282828;
+  border: 1px solid #D4D4D4;
+  padding: 11px 15px 8px;
+}
+
+.page-button:hover {
+  filter: invert(100%);
+}
+
+.prev-button {
+  margin-right: 20px;
+}
+
+// Deck index of edit/results page
 .deck-sec-title {
   text-align: center;
   margin-bottom: 1.8rem;
 }
 
 .deck-index-type-sec > :last-child {
+  border-bottom: none;
   margin-bottom: 20px;
 }
 
@@ -49,6 +105,7 @@
   background-size: 120% auto;
   background-repeat: no-repeat;
   background-position: -30px -125px;
+  border-bottom: 3px solid #D4D4D4;
 }
 
 .deck-index-card-sec:after {
@@ -63,11 +120,25 @@
 }
 
 .deck-index-card {
+  position: relative;
   z-index: 3;
-  font-size: 0.9em;
+  font-size: 0.925em;
   color: #D4D4D4;
+  padding-right: 15px;
   margin-right: auto;
+  text-overflow: ellipsis;
 }
 
 .remove-card-button {
+  position: relative;
+  z-index: 3;
+  background-color: #282828;
+  color: #D4D4D4;
+  padding: 2.5px 10px;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.remove-card-button:hover {
+  filter: invert(100%)
 }
