--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -20,6 +20,7 @@
 .card-image {
   height: 300px;
   width: 217px;
+  border-radius: 14px;
   background-size: contain;
   background-repeat: no-repeat;
   margin: 20px auto 20px;
@@ -85,6 +86,7 @@
 
 // Deck index of edit/results page
 .deck-sec-title {
+  font-size: 1.1em;
   text-align: center;
   margin-bottom: 1.8rem;
 }
