--- a/app/assets/stylesheets/sitewide.scss
+++ b/app/assets/stylesheets/sitewide.scss
@@ -122,7 +122,7 @@ nav {
 }
 
 .link-button {
-  border-radius: 20px;
+  border: 1px solid #D4D4D4;
   text-decoration: none;
   padding: 15px 20px;
   background-color: #282828;
