--- a/app/assets/stylesheets/sitewide.scss
+++ b/app/assets/stylesheets/sitewide.scss
@@ -124,10 +124,11 @@ nav {
 .link-button {
   border: 1px solid #D4D4D4;
   text-decoration: none;
-  padding: 15px 20px;
+  padding: 12px 16px;
   background-color: #282828;
   color: #D4D4D4;
   transition: all 0.5s ease;
+  cursor: pointer;
 }
 
 .link-button:hover {
