--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,6 @@
   <h2 class="formTitle">SIGN UP</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
 
     <div class="field">
       <%= f.label :email %><br />
@@ -23,10 +22,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up", :class => "link-button form-button" %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
-
 </div>
