--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class='outer-zoom'>
     <div class='show-deck-banner banner-image'>
-      <h3 class='banner-title'>DECKS</h3>
+      <h3 class='banner-title'>BUILD DECKS</h3>
     </div>
   </div>
   <div class='outer-zoom'>
