small margin fix button

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -17,7 +17,6 @@
 
 #signup {
   font-weight: 100;
-
 }
 
 .emailForms {
@@ -49,4 +48,8 @@
 
 .form-button {
   margin: 2rem auto 0;
+}
+
+.decknameForm {
+  margin-bottom: 0.75rem;
 }
