--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -152,7 +152,18 @@
   width: 60%;
   margin: 0 auto;
 }
-
+.add-card-form{
+  display: grid;
+  width: 40%;
+  margin: 0 auto;
+  text-align: center;
+  grid-column-gap: 2rem;
+  grid-template-columns:1fr 1fr;
+}
+.add-form-number-field{
+  height: 2.8rem;
+  width: 4rem;
+}
 
 
 //
