--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>MtgDeckBuilder</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <base href="http://localhost:3000/">
+    <base href="https://desolate-brook-88150.herokuapp.com/">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
